--- a/src/components/Widget/Widget.scss
+++ b/src/components/Widget/Widget.scss
@@ -2,9 +2,9 @@
 
 .title {
   margin-top: 0;
-  color: $widget-title-color;
+  //color: $widget-title-color;
 
-  @include clearfix();
+  //@include clearfix();
 }
 
 .widget {
@@ -14,7 +14,7 @@
   padding: $widget-padding-vertical $widget-padding-horizontal;
   background: $widget-bg;
   border-radius: $widget-border-radius;
-  box-shadow: $widget-shadow;
+  //box-shadow: $widget-shadow;
 
   &.loading {
     min-height: 150px;
@@ -116,10 +116,10 @@
 }
 
 .widgetBody {
-  @include clearfix();
+  //@include clearfix();
 
   > footer {
-    margin: $spacer/2 (-$widget-padding-horizontal) (-$widget-padding-vertical);
+    //margin: $spacer/2 (-$widget-padding-horizontal) (-$widget-padding-vertical);
     padding: $widget-padding-vertical $widget-padding-horizontal;
     border-bottom-left-radius: $widget-border-radius;
     border-bottom-right-radius: $widget-border-radius;
@@ -144,7 +144,7 @@
     border-radius: 4px;
     color: $widget-title-color;
 
-    @include transition(color 0.15s ease-in-out);
+    //@include transition(color 0.15s ease-in-out);
 
     &:hover {
       color: rgba($widget-title-color, 0.5);
@@ -240,10 +240,10 @@
       z-index: 1;
       margin-right: $widget-padding-horizontal;
 
-      @include media-breakpoint-up(md) {
-        top: auto;
-        bottom: 0;
-      }
+      //@include media-breakpoint-up(md) {
+      //  top: auto;
+      //  bottom: 0;
+      //}
     }
   }
 
